2007-04-16  Richard Dale  <rdale@foton.es>

	* Added a QyotoHash() method for deriving a hash value from the c++
	  pointer of an instance.

2007-04-15  Richard Dale  <rdale@foton.es>

	* The Qyoto project is built with no symbols visible by default in
	  kdebindings, so add function declarations in qyoto.h to make it work.
	* Added some more implicit type conversion operator methods and chaanged
	  the code in the tutorial t14 example to use them

2007-04-14  Richard Dale  <rdale@foton.es>
	
	* Fixed some compiler warnings
	* Added implicit operator conversions for various types to QVariants

2007-04-13  Arno Rehn  <arno@arnorehn.de>

	* Fixed CMakeLists.txt's to work with the new directory structure. Some lines of
	  the top-level CMakeLists.txt should be put in subdirectories, though.
	* Subclasses of QTextBlockUserData are now contained instances.

2007-04-09  Richard Dale  <rdale@foton.es>

	* Added marshallers for some of the new Qt 4.3 list types

2007-04-08  Richard Dale  <rdale@foton.es>

	* Improved the code to only generate C# properties instead of normal
	  method calls. Only generate code for the Read and write methods of
	  the property if they are slots, signals or virtual methods.
	* Fixed the uics tool to generate code that compiles with the above
	  change.

2007-04-08  Arno Rehn  <arno@arnorehn.de>

	* Renamed all QAbstract*Helper classes to QAbstract*Internal and
	  marked them as internal, so they cannot be accessed from outside
	  the assembly.

2007-04-06  Richard Dale  <rdale@foton.es>

	* Fixed all compiler warnings in the generated code, except for 180 
	  warnings about the smokeObject private variable not being used.

2007-04-06  Arno Rehn  <arno@arnorehn.de>

	* Added missing QItemModel.cs. Forgot to do a 'svn add' last time.
	* Added more helper classes for abstract base classes which are returned by
	  public methods.
	* Fixed little bug in qdbus/chat/chat.cs.

2007-04-06  Richard Dale  <rdale@foton.es>
